--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/970x250/PaoliPeaks/970x250_PaoliPeaks.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/970x250/PaoliPeaks/970x250_PaoliPeaks.htm
@@ -45,6 +45,11 @@
         font-weight: 700;
         font-style: normal;
       }
+      .JosefinSansRegular {
+        font-family: josefin-sans, sans-serif;
+        font-weight: 400;
+        font-style: normal;
+      }
       .InterstateBold {
         font-family: "interstate", sans-serif;
         font-weight: 700;
@@ -207,7 +212,7 @@
                  document.querySelector('#cta').classList.add('PromptBold');
 
               }else if(content['brandName'].replace(/ /g,'').toLowerCase() == 'attitash'){
-                 document.querySelector('#loadFont').innerHTML = '<div class="JosefinSansBold"style="color: transparent">JosefinSansBold</div>';
+                 document.querySelector('#loadFont').innerHTML = '<div class="JosefinSansRegular"style="color: transparent">JosefinSansRegular</div>';
 
                  content.ctaBtnColor = '#FDB714^#f89f04';
                  document.querySelector('#topWhitePatch').style.backgroundColor = '#F0EFEB';
@@ -216,8 +221,9 @@
                  document.querySelector('#cta').style.color = '#00539C';
 
                  let frameTexts = document.querySelectorAll('.frameText');
-                 frameTexts.forEach(function(elem) { elem.classList.add('JosefinSansBold') })
-                 document.querySelector('#cta').classList.add('JosefinSansBold');
+                 frameTexts.forEach(function(elem) { elem.classList.add('JosefinSansRegular'); elem.style.letterSpacing = 0; })
+                 document.querySelector('#cta').classList.add('JosefinSansRegular');
+                 document.querySelector('#cta').style.letterSpacing = 0;
 
               }else if(content['brandName'].replace(/ /g,'').toLowerCase() == 'bostonmills'){
                 document.querySelector('#loadFont').innerHTML = '<div class="InterstateBold"style="color: transparent">InterstateBold</div>';
@@ -229,8 +235,9 @@
                  document.querySelector('#cta').style.color = '#000000';
 
                  let frameTexts = document.querySelectorAll('.frameText');
-                 frameTexts.forEach(function(elem) { elem.classList.add('InterstateBold') })
+                 frameTexts.forEach(function(elem) { elem.classList.add('InterstateBold'); elem.style.letterSpacing = 0;})
                  document.querySelector('#cta').classList.add('InterstateBold');
+                 document.querySelector('#cta').style.letterSpacing = 0;
 
               }else if(content['brandName'].replace(/ /g,'').toLowerCase() == 'crotched'){
                 document.querySelector('#loadFont').innerHTML = '<div class="EurostileHeavy"style="color: transparent">EurostileHeavy</div>';
@@ -427,6 +434,8 @@
           let ctaElementSpan = document.querySelector('#cta span');
             if(adData['brandName'].replace(/ /g,'').toLowerCase() == 'jfbb'){
               ctaElementSpan.style.paddingTop = '3px';
+            } else if(adData['brandName'].replace(/ /g,'').toLowerCase() == 'attitash') {
+              ctaElementSpan.style.padding = '0 20px 2px';
             }
           /**********/
 
