--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/BeaverCreek/160x600_BeaverCreek.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/BeaverCreek/160x600_BeaverCreek.htm
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
-      .OpenSansCondensedBold {
+      /* .OpenSansCondensedBold {
         font-family: open-sans-condensed,sans-serif;
         font-weight: 700;
         font-style: normal;
@@ -17,6 +17,11 @@
       .MontserratBold{
         font-family: montserrat, sans-serif;
         font-weight: 700;
+        font-style: normal;
+      } */
+      .AlternateGothicATFMedium {
+        font-family: "alternate-gothic-atf", sans-serif;
+        font-weight: 500;
         font-style: normal;
       }
     </style>
@@ -27,8 +32,8 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #5c6f7c;
-        background-color: #fff;
+        color: #ffffff;
+        background-color: #80A1B6;
       }
       .frame {
         position: absolute;
@@ -37,8 +42,10 @@
         width:inherit;
         height:inherit;
       }
+      #cta { color: #fff; }
       #cta { background-color: !{ctaBtn}; }
       #ad:hover #cta { background-color: !{ctaBtnHover}; }
+      #ad:hover #cta { color: !{ctaBtn}; }
     </style>
   </head>
   <body>
@@ -46,12 +53,12 @@
       <div id="backgroundImage1" style="top: 44px;width: 160px;height: auto;" class="asset-top frame" data-image="backgroundImage1"></div>
       <div id="backgroundImage2" style="top: 44px;width: 160px;height: auto;" class="asset-top frame multiframe" data-image="backgroundImage2"></div>
       <div id="backgroundImage3" style="top: 44px;width: 160px;height: auto;" class="asset-top frame multiframe" data-image="backgroundImage3"></div>
-      <div id="topWhitePatch" class="frame" style="top:-556px;background-color:rgba(255, 255, 255, 1.0);"></div>
-      <div id="bottomWhitePatch" class="frame" style="top:453px;background-color:rgba(255, 255, 255, 1.0);"></div>
+      <div id="topWhitePatch" class="frame" style="top:-556px;background-color:rgba(128, 161, 182, 1.0);"></div>
+      <div id="bottomWhitePatch" class="frame" style="top:453px;background-color:rgba(128, 161, 182, 1.0);"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text MontserratBold"
+      <div id="frameText1" class="text AlternateGothicATFMedium"
         data-text="frameText1"
         data-style="text-align:center;"
         style="top: 457px;
@@ -62,7 +69,7 @@
           letter-spacing: 0.05em;
           line-height: 1.3;">
       </div>
-      <div id="frameText2" class="text MontserratBold"
+      <div id="frameText2" class="text AlternateGothicATFMedium"
         data-text="frameText2"
         data-style="text-align:center;"
         style="top: 457px;
@@ -73,7 +80,7 @@
           letter-spacing: 0.05em;
           line-height: 1.3;">
       </div>
-      <div id="frameText3" class="text MontserratBold"
+      <div id="frameText3" class="text AlternateGothicATFMedium"
         data-text="frameText3"
         data-style="text-align:center;"
         style="top: 457px;
@@ -84,7 +91,7 @@
           letter-spacing: 0.05em;
           line-height: 1.3;">
       </div>
-      <div id="cta" class="text OpenSansCondensedBold"
+      <div id="cta" class="text AlternateGothicATFMedium"
         data-text="ctaText"
         data-style="text-align:center;padding:0 8px 0px;"
         style="top: 545px;
@@ -94,15 +101,13 @@
           font-size: 14px;
           line-height: 20px;
           letter-spacing: 1.1px;
-          /*border-radius: 15px;*/
-          color: #fff;">
+          border: 1px solid #fff;
+          /*border-radius: 15px;*/">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="MontserratBold">MontserratBold</div>
-      <!-- <div class="TradeGothicNextLTProBoldCondensed">TradeGothicNextLTProBoldCondensed</div> -->
-      <div class="OpenSansCondensedBold">OpenSansCondensedBold</div>
+      <div class="AlternateGothicATFMedium">AlternateGothicATFMedium</div>
     </div>
     <script type="text/javascript">
       var layout = 'standard';
@@ -139,7 +144,7 @@
             // ref: 'ref.png'
             logoImage: './../images/160x600_BeaverCreek_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#5c6f7c^#3d4952',
+            ctaBtnColor: '#80A1B6^#ffffff',
           },
           beforeLoad: function(data){
             data.map(function(content){
@@ -204,7 +209,7 @@
             canvas.width = this.width;
             canvas.height = this.height;
             document.body.appendChild(canvas);
-            ctx.fillStyle = "#5C6F7C";
+            ctx.fillStyle = "#ffffff";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.globalCompositeOperation = 'destination-in';
             ctx.drawImage(this, 0, 0);
