--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x600/CrestedButte/300x600_CrestedButte.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x600/CrestedButte/300x600_CrestedButte.htm
@@ -54,7 +54,7 @@
           width: 260px;
           height: 72px;
           font-size: 25px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           line-height: 1.15;">
       </div>
       <div id="frameText2" class="text GibsonSemibold"
@@ -65,7 +65,7 @@
           width: 260px;
           height: 72px;
           font-size: 25px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           line-height: 1.15;">
       </div>
       <div id="frameText3" class="text GibsonSemibold"
@@ -76,7 +76,7 @@
           width: 260px;
           height: 72px;
           font-size: 25px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           line-height: 1.15;">
       </div>
       <div id="cta" class="text GibsonSemibold"
@@ -88,7 +88,7 @@
           height: 34px;
           font-size: 14px;
           line-height: 20px;
-          letter-spacing: 0.08em;
+          /* letter-spacing: 0.08em; */
           /* border-radius: 20px; */
           color: #fff;">
       </div>
