--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/728x90/CrestedButte/728x90_CrestedButte.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/728x90/CrestedButte/728x90_CrestedButte.htm
@@ -53,7 +53,7 @@
           width: 170px;
           height: 80px;
           font-size: 21px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           line-height: 1.1;">
       </div>
       <div id="frameText2" class="text-left GibsonSemibold"
@@ -63,7 +63,7 @@
           width: 170px;
           height: 80px;
           font-size: 21px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           line-height: 1.1;">
       </div>
       <div id="frameText3" class="text-left GibsonSemibold"
@@ -73,7 +73,7 @@
           width: 170px;
           height: 80px;
           font-size: 21px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           line-height: 1.1;">
       </div>
       <div id="cta" class="text GibsonSemibold"
@@ -85,7 +85,7 @@
           height: 30px;
           font-size: 12px;
           line-height: 20px;
-          letter-spacing: 0.08em;
+          /* letter-spacing: 0.08em; */
           /* border-radius: 20px; */
           color: #fff;">
       </div>
