--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/970x250/CrestedButte/970x250_CrestedButte.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/970x250/CrestedButte/970x250_CrestedButte.htm
@@ -53,7 +53,7 @@
           width: 320px;
           height: 120px;
           font-size: 28px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           line-height: 1.13;">
       </div>
       <div id="frameText2" class="text-left GibsonSemibold"
@@ -63,7 +63,7 @@
           width: 320px;
           height: 120px;
           font-size: 28px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           line-height: 1.13;">
       </div>
       <div id="frameText3" class="text-left GibsonSemibold"
@@ -73,7 +73,7 @@
           width: 320px;
           height: 120px;
           font-size: 28px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           line-height: 1.13;">
       </div>
       <div id="cta" class="text GibsonSemibold"
@@ -86,7 +86,7 @@
           height: 40px;
           font-size: 17px;
           line-height: 22px;
-          letter-spacing: 0.1em;
+          /* letter-spacing: 0.1em; */
           /* border-radius: 20px; */
           color: #fff;">
       </div>
