--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/BeaverCreek/160x600_BeaverCreek.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/BeaverCreek/160x600_BeaverCreek.htm
@@ -65,9 +65,9 @@
           left: 15px;
           width: 130px;
           height: 70px;
-          font-size: 15px;
+          font-size: 17px;
           letter-spacing: 0.05em;
-          line-height: 1.3;">
+          line-height: 1.1;">
       </div>
       <div id="frameText2" class="text AlternateGothicATFMedium"
         data-text="frameText2"
@@ -76,9 +76,9 @@
           left: 15px;
           width: 130px;
           height: 70px;
-          font-size: 15px;
+          font-size: 17px;
           letter-spacing: 0.05em;
-          line-height: 1.3;">
+          line-height: 1.1;">
       </div>
       <div id="frameText3" class="text AlternateGothicATFMedium"
         data-text="frameText3"
@@ -87,9 +87,9 @@
           left: 15px;
           width: 130px;
           height: 70px;
-          font-size: 15px;
+          font-size: 17px;
           letter-spacing: 0.05em;
-          line-height: 1.3;">
+          line-height: 1.1;">
       </div>
       <div id="cta" class="text AlternateGothicATFMedium"
         data-text="ctaText"
@@ -100,7 +100,7 @@
           height: 28px;
           font-size: 14px;
           line-height: 20px;
-          letter-spacing: 1.1px;
+          letter-spacing: 0.05em;
           border: 1px solid #fff;
           /*border-radius: 15px;*/">
       </div>
