--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/CrestedButte/160x600_CrestedButte.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/CrestedButte/160x600_CrestedButte.htm
@@ -54,7 +54,7 @@
           width: 130px;
           height: 70px;
           font-size: 15px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           line-height: 1.3;">
       </div>
       <div id="frameText2" class="text GibsonSemibold"
@@ -65,7 +65,7 @@
           width: 130px;
           height: 70px;
           font-size: 15px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           line-height: 1.3;">
       </div>
       <div id="frameText3" class="text GibsonSemibold"
@@ -76,7 +76,7 @@
           width: 130px;
           height: 70px;
           font-size: 15px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           line-height: 1.3;">
       </div>
       <div id="cta" class="text GibsonSemibold"
@@ -88,7 +88,7 @@
           height: 28px;
           font-size: 12px;
           line-height: 20px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           /* border-radius: 15px; */
           color: #fff;">
       </div>
@@ -154,7 +154,7 @@
               if(layout == 'multipleimages') {
                 content.styleProperties = "{'#cta': {x:'-50%',y:10}}";
                 var cta = document.querySelector("#cta");
-                cta.style.width = "140px";
+                cta.style.width = "135px";
                 cta.style.left = "50%";
                 cta.innerHTML = '<span style="' + cta.dataset.style + '">' + content.ctaText + '</span>';
                 cta.style.width = cta.offsetWidth + 'px'
@@ -162,7 +162,7 @@
               } else if(layout == 'multipleimagesoffer') {
                 content.styleProperties = "{'#cta': {x:'-50%',y:-15}, '#productLableLogo': {css:{display:'block'}}}";
                 var cta = document.querySelector("#cta");
-                cta.style.width = "140px";
+                cta.style.width = "135px";
                 cta.style.left = "50%";
                 cta.innerHTML = '<span style="' + cta.dataset.style + '">' + content.ctaText + '</span>';
                 cta.style.width = cta.offsetWidth + 'px';
