--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/Northstar/160x600_Northstar.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/Northstar/160x600_Northstar.htm
@@ -27,7 +27,7 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #D7941D;
+        color: #7d1c25;
         background-color: #fff;
       }
       .frame {
@@ -37,7 +37,6 @@
         width:inherit;
         height:inherit;
       }
-      #cta { color: #D7941D; }
       #cta { background-color: !{ctaBtn};  }
       #ad:hover #cta { background-color: !{ctaBtnHover}; }
       #ad:hover #cta { color: !{ctaBtn};  }
@@ -61,7 +60,7 @@
           width: 130px;
           height: 70px;
           font-size: 15px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           line-height: 1.3;">
       </div>
       <div id="frameText2" class="text DashiellFineBold"
@@ -72,7 +71,7 @@
           width: 130px;
           height: 70px;
           font-size: 15px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           line-height: 1.3;">
       </div>
       <div id="frameText3" class="text DashiellFineBold"
@@ -83,21 +82,21 @@
           width: 130px;
           height: 70px;
           font-size: 15px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           line-height: 1.3;">
       </div>
       <div id="cta" class="text DashiellFineBold"
         data-text="ctaText"
-        data-style="text-align:center;padding:3px 8px 0px;"
+        data-style="text-align:center;padding:0 8px 0px;"
         style="top: 545px;
           left: 32px;
           width: 96px;
           height: 28px;
           font-size: 13px;
           line-height: 20px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           border-radius: 15px;
-          border: 1px solid #D7941D;">
+          color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
@@ -139,7 +138,7 @@
             // ref: 'ref.png'
             logoImage: './../images/160x600_Northstar_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#ffffff^#D7941D',
+            ctaBtnColor: '#7d1c25^#D7941D',
           },
           beforeLoad: function(data){
             data.map(function(content){
@@ -161,7 +160,7 @@
               if(layout == 'multipleimages') {
                 content.styleProperties = "{'#cta': {x:'-50%',y:10}}";
                 var cta = document.querySelector("#cta");
-                cta.style.width = "140px";
+                cta.style.width = "135px";
                 cta.style.left = "50%";
                 cta.innerHTML = '<span style="' + cta.dataset.style + '">' + content.ctaText + '</span>';
                 cta.style.width = cta.offsetWidth + 'px'
@@ -169,7 +168,7 @@
               } else if(layout == 'multipleimagesoffer') {
                 content.styleProperties = "{'#cta': {x:'-50%',y:-15}, '#productLableLogo': {css:{display:'block'}}}";
                 var cta = document.querySelector("#cta");
-                cta.style.width = "140px";
+                cta.style.width = "135px";
                 cta.style.left = "50%";
                 cta.innerHTML = '<span style="' + cta.dataset.style + '">' + content.ctaText + '</span>';
                 cta.style.width = cta.offsetWidth + 'px';
@@ -204,7 +203,7 @@
             canvas.width = this.width;
             canvas.height = this.height;
             document.body.appendChild(canvas);
-            ctx.fillStyle = "#D7941D";
+            ctx.fillStyle = "#7b1b24";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.globalCompositeOperation = 'destination-in';
             ctx.drawImage(this, 0, 0);
