--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/320x50/BeaverCreek/320x50_BeaverCreek.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/320x50/BeaverCreek/320x50_BeaverCreek.htm
@@ -97,7 +97,7 @@
           height: 18px;
           font-size: 8px;
           line-height: 10px;
-          letter-spacing: 0.5px;
+          letter-spacing: 0.05em;
           border: 1px solid #fff;
           /* border-radius: 12px; */">
       </div>
