--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/320x50/CrestedButte/320x50_CrestedButte.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/320x50/CrestedButte/320x50_CrestedButte.htm
@@ -53,7 +53,7 @@
           width: 82px;
           height: 44px;
           font-size: 11px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           line-height: 1.1;">
       </div>
       <div id="frameText2" class="text-left GibsonSemibold"
@@ -63,7 +63,7 @@
           width: 82px;
           height: 44px;
           font-size: 11px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           line-height: 1.1;">
       </div>
       <div id="frameText3" class="text-left GibsonSemibold"
@@ -73,7 +73,7 @@
           width: 82px;
           height: 44px;
           font-size: 11px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           line-height: 1.1;">
       </div>
       <div id="cta" class="text GibsonSemibold"
@@ -85,7 +85,7 @@
           height: 18px;
           font-size: 8px;
           line-height: 10px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           /* border-radius: 12px; */
           color: #fff;">
       </div>
