--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/320x50/BeaverCreek/320x50_BeaverCreek.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/320x50/BeaverCreek/320x50_BeaverCreek.htm
@@ -19,9 +19,9 @@
         font-weight: 700;
         font-style: normal;
       } */
-      .AlternateGothicATFMedium {
+      .AlternateGothicATFDemi {
         font-family: "alternate-gothic-atf", sans-serif;
-        font-weight: 500;
+        font-weight: 600;
         font-style: normal;
       }
     </style>
@@ -58,37 +58,37 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text-left AlternateGothicATFMedium"
+      <div id="frameText1" class="text-left AlternateGothicATFDemi"
         data-text="frameText1"
         style="top: 3px;
           left: 180px;
           width: 82px;
           height: 44px;
           font-size: 10px;
-          letter-spacing: 0.05em;
+          letter-spacing: 0.025em;
           line-height: 1.1;">
       </div>
-      <div id="frameText2" class="text-left AlternateGothicATFMedium"
+      <div id="frameText2" class="text-left AlternateGothicATFDemi"
         data-text="frameText2"
         style="top: 3px;
           left: 180px;
           width: 82px;
           height: 44px;
           font-size: 10px;
-          letter-spacing: 0.05em;
+          letter-spacing: 0.025em;
           line-height: 1.1;">
       </div>
-      <div id="frameText3" class="text-left AlternateGothicATFMedium"
+      <div id="frameText3" class="text-left AlternateGothicATFDemi"
         data-text="frameText3"
         style="top: 3px;
           left: 180px;
           width: 82px;
           height: 44px;
           font-size: 10px;
-          letter-spacing: 0.05em;
+          letter-spacing: 0.025em;
           line-height: 1.1;">
       </div>
-      <div id="cta" class="text AlternateGothicATFMedium"
+      <div id="cta" class="text AlternateGothicATFDemi"
         data-text="ctaText"
         data-style="padding:0 6px 0px;"
         style="top: 16px;
@@ -97,14 +97,14 @@
           height: 18px;
           font-size: 8px;
           line-height: 10px;
-          letter-spacing: 0.05em;
+          letter-spacing: 0.025em;
           border: 1px solid #fff;
           /* border-radius: 12px; */">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="AlternateGothicATFMedium">AlternateGothicATFMedium</div>
+      <div class="AlternateGothicATFDemi">AlternateGothicATFDemi</div>
     </div>
     <script type="text/javascript">
       var layout = 'standard';
