--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/970x250/Vail/970x250_Vail.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/970x250/Vail/970x250_Vail.htm
@@ -19,6 +19,11 @@
         font-weight: 900;
         font-style: normal;
       }
+      @font-face {
+          font-family: AvenirBlack;
+          src: url('fonts/Avenir-Black.woff') format("woff");
+      }
+      .AvenirBlack { font-family: AvenirBlack; }
     </style>
     <style media="screen" data-dynamic="style">
       #ad {
@@ -81,7 +86,7 @@
           letter-spacing: 0.02em;
           line-height: 1;">
       </div>
-      <div id="cta" class="text TerminaBlack"
+      <div id="cta" class="text AvenirBlack"
         data-text="ctaText"
         data-style="padding:4px 20px 1px;"
         style="top: 193px;
@@ -91,7 +96,7 @@
           height: 40px;
           font-size: 16px;
           line-height: 22px;
-          letter-spacing: 0.05em;
+          /* letter-spacing: 0.05em; */
           border-radius: 20px;
           color: #fff;">
       </div>
@@ -99,6 +104,7 @@
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
       <div class="TerminaBlack">TerminaBlack</div>
+      <div class="AvenirBlack">AvenirBlack</div>
     </div>
     <script type="text/javascript">
       var layout = 'standard';
