--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/970x250/MtSunapee/970x250_MtSunapee.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/970x250/MtSunapee/970x250_MtSunapee.htm
@@ -139,7 +139,7 @@
             // ref: 'ref.png'
             logoImage: './../images/970x250_MtSunapee_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#fdb933^#f9c765',
+            ctaBtnColor: '#FDB933^#f9c765',
           },
           beforeLoad: function(data){
             data.map(function(content){
@@ -185,7 +185,7 @@
             canvas.width = this.width;
             canvas.height = this.height;
             document.body.appendChild(canvas);
-            ctx.fillStyle = "#F8951F";
+            ctx.fillStyle = "#FDB933";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.globalCompositeOperation = 'destination-in';
             ctx.drawImage(this, 0, 0);
