--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/970x250/Liberty/970x250_Liberty.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/970x250/Liberty/970x250_Liberty.htm
@@ -132,7 +132,7 @@
             // ref: 'ref.png'
             logoImage: './../images/970x250_Liberty_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#e18431^#51879f',
+            ctaBtnColor: '#4e5758^#51879f',
           },
           beforeLoad: function(data){
             data.map(function(content){
@@ -178,7 +178,7 @@
             canvas.width = this.width;
             canvas.height = this.height;
             document.body.appendChild(canvas);
-            ctx.fillStyle = "#3F5364";
+            ctx.fillStyle = "#4e5758";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.globalCompositeOperation = 'destination-in';
             ctx.drawImage(this, 0, 0);
