Vail - Epic Pass Whistler Font Update

--- a/E/Epic/EpicPass_Whistler/ads/160x600/160x600.html
+++ b/E/Epic/EpicPass_Whistler/ads/160x600/160x600.html
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="https://ads.everesttech.net/ads/static/local/AMOLibrary.js"></script>
     <link rel="stylesheet" href="css/style.min.css">
     <!-- <link rel="stylesheet" href="https://use.typekit.net/tag1rnw.css"> -->
-    <link rel="stylesheet" href="https://use.typekit.net/emp0yrj.css">
+    <link rel="stylesheet" href="https://use.typekit.net/baq5deb.css">
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
