Fixed CTA color

--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/Keystone/160x600_Keystone.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/Keystone/160x600_Keystone.htm
@@ -90,7 +90,7 @@
           line-height: 20px;
           letter-spacing: 1.1px;
           /*border-radius: 15px;*/
-          color: #00A3E0;">
+          color: #E03C31;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
@@ -132,7 +132,7 @@
             // ref: 'ref.png'
             logoImage: './../images/160x600_Keystone_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#FFFFFF^#A6E4F8',
+            ctaBtnColor: '#FFFFFF^#00A3E0',
           },
           beforeLoad: function(data){
             data.map(function(content){
