--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/320x50/Keystone/320x50_Keystone.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/320x50/Keystone/320x50_Keystone.htm
@@ -87,7 +87,7 @@
           line-height: 10px;
           letter-spacing: 0.5px;
           /*border-radius: 12px;*/
-          color: #00A3E0;">
+          color: #E03C31;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
@@ -129,7 +129,7 @@
             // ref: 'ref.png'
             logoImage: './../images/320x50_Keystone_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#FFFFFF^#A6E4F8',
+            ctaBtnColor: '#FFFFFF^#00A3E0',
           },
           beforeLoad: function(data){
             data.map(function(content){
