--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/300x250/Keystone/300x250_Keystone.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/300x250/Keystone/300x250_Keystone.htm
@@ -88,7 +88,7 @@
           line-height: 20px;
           letter-spacing: 1px;
           /* border-radius: 15px; */
-          color: #00A3E0;">
+          color: #E03C31;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
@@ -131,7 +131,7 @@
             // ref: 'ref.png'
             logoImage: './../images/300x250_Keystone_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#FFFFFF^#A6E4F8',
+            ctaBtnColor: '#FFFFFF^#00A3E0',
           },
           beforeLoad: function(data){
             data.map(function(content){
