--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/300x250/Keystone/300x250_Keystone.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/300x250/Keystone/300x250_Keystone.htm
@@ -32,8 +32,8 @@
         width:inherit;
         height:inherit;
       }
-      #cta { background-color: !{ctaBtn}; }
-      #ad:hover #cta { background-color: !{ctaBtnHover}; }
+      #cta { background-color: !{ctaBtn}; color: #E03C31;}
+      #ad:hover #cta { background-color: !{ctaBtnHover}; color: #FFFFFF;}
     </style>
   </head>
   <body>
@@ -88,7 +88,7 @@
           line-height: 20px;
           letter-spacing: 1px;
           /* border-radius: 15px; */
-          color: #E03C31;">
+          ">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
