added color code

--- a/M/Microsoft/MicrosoftAzure/Azure_Static_Background_Refresh_FY25/ads/160x600/160x600.html
+++ b/M/Microsoft/MicrosoftAzure/Azure_Static_Background_Refresh_FY25/ads/160x600/160x600.html
@@ -77,7 +77,7 @@
           width:140px;
           height:46px;
           font-size:13.24px;
-          color:#0078d3;">
+          color:#000;">
       </div>
 
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
