--- a/M/Microsoft/MicrosoftAzure/Azure_Static_Background_Refresh_FY25/ads/300x600/300x600.html
+++ b/M/Microsoft/MicrosoftAzure/Azure_Static_Background_Refresh_FY25/ads/300x600/300x600.html
@@ -77,7 +77,7 @@
           width:250px;
           height:20px;
           font-size:14.75px;
-          color:#0078d3;">
+          color:#000;">
       </div>
 
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
