--- a/M/Microsoft/MicrosoftAzure/Azure_Static_Background_Refresh_FY25/ads/728x90/728x90.html
+++ b/M/Microsoft/MicrosoftAzure/Azure_Static_Background_Refresh_FY25/ads/728x90/728x90.html
@@ -78,7 +78,7 @@
           width:200px;
           height:20px;
           font-size:13.24px;
-          color:#0078d3;">
+          color:#000;">
       </div>
 
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
