--- a/E/Epic/Vail_Resort_Template(T22)/ads/300x250/Kirkwood/300x250_Kirkwood.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/300x250/Kirkwood/300x250_Kirkwood.htm
@@ -88,7 +88,7 @@
         style="top: 173px;
           right: 5px;
           font-size: 8px;
-          color: #C7DBEB;
+          color: #6D6E70;
           letter-spacing: -0.1px;">
       </div>
       <div id="cta" class="text TradeGothicNextLTProBoldCondensed"
