--- a/E/Epic/Vail_Resort_Template(T22)/ads/160x600/Hunter/160x600_Hunter.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/160x600/Hunter/160x600_Hunter.htm
@@ -86,7 +86,7 @@
         style="bottom: -5px;
           right: 4px;
           font-size: 8px;
-          color: #C7DBEB;
+          color: #909090;
           letter-spacing: -0.1px;">
       </div>
       <div id="cta" class="text RobotoSlabBold"
