--- a/E/Epic/Vail_Resort_Template(T22)/ads/160x600/MtSunapee/160x600_MtSunapee.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/160x600/MtSunapee/160x600_MtSunapee.htm
@@ -94,7 +94,7 @@
         style="bottom: -5px;
           right: 4px;
           font-size: 8px;
-          color: #C7DBEB;
+          color: #00263E;
           letter-spacing: -0.1px;">
       </div>
       <div id="cta" class="text JosefinSansBold"
