--- a/E/Epic/Vail_Resort_Template(T22)/ads/160x600/Vail/160x600_Vail.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/160x600/Vail/160x600_Vail.htm
@@ -96,7 +96,7 @@
         style="bottom: -5px;
           right: 4px;
           font-size: 8px;
-          color: #C7DBEB;
+          color: #808285;
           letter-spacing: -0.1px;">
       </div>
       <div id="cta" class="text AvenirBlack"
