--- a/E/Epic/Vail_Resort_Template(T22)/ads/300x250/Breckenridge/300x250_Breckenridge.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/300x250/Breckenridge/300x250_Breckenridge.htm
@@ -89,7 +89,7 @@
         style="top: 173px;
           right: 5px;
           font-size: 8px;
-          color: #C7DBEB;
+          color: #AEAEAE;
           letter-spacing: -0.1px;">
       </div>
       <div id="cta" class="text PoppinsBold"
