--- a/E/Epic/Vail_Resort_Template(T22)/ads/300x250/CrestedButte/300x250_CrestedButte.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/300x250/CrestedButte/300x250_CrestedButte.htm
@@ -83,7 +83,7 @@
         style="top: 173px;
           right: 5px;
           font-size: 8px;
-          color: #C7DBEB;
+          color: #909090;
           letter-spacing: -0.1px;">
       </div>
       <div id="cta" class="text GibsonSemibold"
