--- a/E/Epic/Vail_Resort_Template(T22)/ads/300x250/MtSunapee/300x250_MtSunapee.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/300x250/MtSunapee/300x250_MtSunapee.htm
@@ -91,7 +91,7 @@
         style="top: 173px;
           right: 5px;
           font-size: 8px;
-          color: #C7DBEB;
+          color: #00263E;
           letter-spacing: -0.1px;">
       </div>
       <div id="cta" class="text JosefinSansBold"
