--- a/E/Epic/Vail_Resort_Template(T22)/ads/300x250/Northstar/300x250_Northstar.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/300x250/Northstar/300x250_Northstar.htm
@@ -89,7 +89,7 @@
         style="top: 173px;
           right: 5px;
           font-size: 8px;
-          color: #C7DBEB;
+          color: #545759;
           letter-spacing: -0.1px;">
       </div>
       <div id="cta" class="text DashiellFineBold"
