--- a/E/Epic/Vail_Resort_Template(T22)/ads/300x250/Okemo/300x250_Okemo.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/300x250/Okemo/300x250_Okemo.htm
@@ -93,7 +93,7 @@
         style="top: 173px;
           right: 5px;
           font-size: 8px;
-          color: #C7DBEB;
+          color: #3b466E;
           letter-spacing: -0.1px;">
       </div>
       <div id="cta" class="text InterSemiBold"
