--- a/E/Epic/Vail_Resort_Template(T22)/ads/300x250/ParkCity/300x250_ParkCity.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/300x250/ParkCity/300x250_ParkCity.htm
@@ -90,7 +90,7 @@
         style="top: 173px;
           right: 5px;
           font-size: 8px;
-          color: #C7DBEB;
+          color: #B1B3B6;
           letter-spacing: -0.1px;">
       </div>
       <div id="cta" class="text FuturaBold"
