--- a/E/Epic/Vail_Resort_Template(T22)/ads/300x600/Keystone/300x600_Keystone.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/300x600/Keystone/300x600_Keystone.htm
@@ -86,7 +86,7 @@
         style="bottom: -5px;
           right: 4px;
           font-size: 8px;
-          color: #C7DBEB;
+          color: #AEAEAE;
           letter-spacing: -0.1px;">
       </div>
       <div id="cta" class="text EagleBook"
