--- a/E/Epic/Vail_Resort_Template(T22)/ads/300x600/Northstar/300x600_Northstar.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/300x600/Northstar/300x600_Northstar.htm
@@ -92,7 +92,7 @@
         style="bottom: -5px;
           right: 4px;
           font-size: 8px;
-          color: #C7DBEB;
+          color: #545759;
           letter-spacing: -0.1px;">
       </div>
       <div id="cta" class="text DashiellFineBold"
