--- a/E/Epic/Vail_Resort_Template(T22)/ads/320x50/CrestedButte/320x50_CrestedButte.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/320x50/CrestedButte/320x50_CrestedButte.htm
@@ -87,7 +87,7 @@
         style="bottom: 0px;
           right: 4px;
           font-size: 5px;
-          color: #C7DBEB;
+          color: #909090;
           letter-spacing: -0.1px;">
       </div>
       <div id="cta" class="text GibsonSemibold"
