--- a/E/Epic/Vail_Resort_Template(T22)/ads/320x50/MtSnow/320x50_MtSnow.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/320x50/MtSnow/320x50_MtSnow.htm
@@ -92,7 +92,7 @@
         style="bottom: 0px;
           right: 4px;
           font-size: 5px;
-          color: #C7DBEB;
+          color: #919195;
           letter-spacing: -0.1px;">
       </div>
       <div id="cta" class="text CocoGothicBold"
