--- a/E/Epic/Vail_Resort_Template(T22)/ads/320x50/MtSunapee/320x50_MtSunapee.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/320x50/MtSunapee/320x50_MtSunapee.htm
@@ -95,7 +95,7 @@
         style="bottom: 0px;
           right: 4px;
           font-size: 5px;
-          color: #C7DBEB;
+          color: #00263E;
           letter-spacing: -0.1px;">
       </div>
       <div id="cta" class="text JosefinSansBold"
