--- a/E/Epic/Vail_Resort_Template(T22)/ads/320x50/Northstar/320x50_Northstar.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/320x50/Northstar/320x50_Northstar.htm
@@ -93,7 +93,7 @@
         style="bottom: 0px;
           right: 4px;
           font-size: 5px;
-          color: #C7DBEB;
+          color: #545759;
           letter-spacing: -0.1px;">
       </div>
       <div id="cta" class="text DashiellFineBold"
