--- a/E/Epic/Vail_Resort_Template(T22)/ads/320x50/Okemo/320x50_Okemo.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/320x50/Okemo/320x50_Okemo.htm
@@ -97,7 +97,7 @@
         style="bottom: 0px;
           right: 4px;
           font-size: 5px;
-          color: #C7DBEB;
+          color: #3b466E;
           letter-spacing: -0.1px;">
       </div>
       <div id="cta" class="text InterSemiBold"
