--- a/E/Epic/Vail_Resort_Template(T22)/ads/728x90/Liberty/728x90_Liberty.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/728x90/Liberty/728x90_Liberty.htm
@@ -86,7 +86,7 @@
         style="bottom: -2px;
           right: 20px;
           font-size: 8px;
-          color: #C7DBEB;
+          color: #748693;
           letter-spacing: -0.1px;">
       </div>
       <div id="cta" class="text SentinelBook"
