--- a/E/Epic/Vail_Resort_Template(T22)/ads/728x90/MtSunapee/728x90_MtSunapee.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/728x90/MtSunapee/728x90_MtSunapee.htm
@@ -94,7 +94,7 @@
         style="bottom: -2px;
           right: 20px;
           font-size: 8px;
-          color: #C7DBEB;
+          color: #00263E;
           letter-spacing: -0.1px;">
       </div>
       <div id="cta" class="text JosefinSansBold"
