--- a/E/Epic/Vail_Resort_Template(T22)/ads/728x90/SevenSprings/728x90_SevenSprings.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/728x90/SevenSprings/728x90_SevenSprings.htm
@@ -91,7 +91,7 @@
         style="bottom: -2px;
           right: 20px;
           font-size: 8px;
-          color: #C7DBEB;
+          color: #909090;
           letter-spacing: -0.1px;">
       </div>
       <div id="cta" class="text MontserratExtraBold"
