--- a/E/Epic/Vail_Resort_Template(T22)/ads/970x250/Hunter/970x250_Hunter.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/970x250/Hunter/970x250_Hunter.htm
@@ -83,7 +83,7 @@
         style="bottom: 0px;
           right: 4px;
           font-size: 8px;
-          color: #C7DBEB;
+          color: #909090;
           letter-spacing: -0.1px;">
       </div>
       <div id="cta" class="text RobotoSlabBold"
