--- a/E/Epic/Vail_Resort_Template(T22)/ads/970x250/ParkCity/970x250_ParkCity.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/970x250/ParkCity/970x250_ParkCity.htm
@@ -90,7 +90,7 @@
         style="bottom: 0px;
           right: 4px;
           font-size: 8px;
-          color: #C7DBEB;
+          color: #B1B3B6;
           letter-spacing: -0.1px;">
       </div>
       <div id="cta" class="text FuturaBold"
